fixed alignment with bottom content

--- a/css/index.css
+++ b/css/index.css
@@ -246,10 +246,14 @@ body h5 p {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
+  justify-content: center;
 }
 .bottom-content .bottom-header {
   font-size: 23px;
   margin-bottom: 40px;
+}
+.bottom-content .description {
+  width: 45%;
 }
 .bottom-text {
   font-size: 18px;
