--- a/less/home.less
+++ b/less/home.less
@@ -69,12 +69,18 @@
     display: flex;
     flex-wrap: wrap;
     align-content: center;
+    justify-content: center;
 
     .bottom-header {
         font-size: 23px;
         margin-bottom: 40px;
     }
+
+    .description {
+        width: 45%;
+    }
 }
+
 
 .bottom-text {
     font-size: 18px;
